[gd_scene load_steps=7 format=2]

[ext_resource path="res://Grid/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/Xolonium-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Game/Game.gd" type="Script" id=9]
[ext_resource path="res://UI/EndScreen.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 5
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 9 )

[node name="EnemySpawner" type="Position2D" parent="."]
position = Vector2( 320, 360 )

[node name="Grid" parent="." instance=ExtResource( 1 )]

[node name="UI" parent="." instance=ExtResource( 2 )]
layer = 0

[node name="Screens" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2

[node name="SignScreen" type="ColorRect" parent="Screens"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.0588235, 0.301961, 0.784314 )

[node name="SignLabel" type="Label" parent="Screens/SignScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Ready?"
align = 1
valign = 1

[node name="EndScreen" parent="Screens" instance=ExtResource( 10 )]
visible = false

[node name="SignTimer" type="Timer" parent="Screens"]

[connection signal="timeout" from="Screens/SignTimer" to="." method="_on_SignTimer_timeout"]
